; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/synctex/extr_synctex_parser.c__synctex_display_void_hbox.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/synctex/extr_synctex_parser.c__synctex_display_void_hbox.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"....h%i,%i:%i,%i:%i,%i,%i\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_synctex_display_void_hbox(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @SYNCTEX_TAG(i32 %3)
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @SYNCTEX_LINE(i32 %5)
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @SYNCTEX_HORIZ(i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @SYNCTEX_VERT(i32 %9)
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @SYNCTEX_WIDTH(i32 %11)
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @SYNCTEX_HEIGHT(i32 %13)
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @SYNCTEX_DEPTH(i32 %15)
  %17 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %4, i32 %6, i32 %8, i32 %10, i32 %12, i32 %14, i32 %16)
  %18 = load i32, i32* %2, align 4
  %19 = call i32 @SYNCTEX_SIBLING(i32 %18)
  %20 = call i32 @SYNCTEX_DISPLAY(i32 %19)
  ret void
}

declare dso_local i32 @printf(i8*, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @SYNCTEX_TAG(i32) #1

declare dso_local i32 @SYNCTEX_LINE(i32) #1

declare dso_local i32 @SYNCTEX_HORIZ(i32) #1

declare dso_local i32 @SYNCTEX_VERT(i32) #1

declare dso_local i32 @SYNCTEX_WIDTH(i32) #1

declare dso_local i32 @SYNCTEX_HEIGHT(i32) #1

declare dso_local i32 @SYNCTEX_DEPTH(i32) #1

declare dso_local i32 @SYNCTEX_DISPLAY(i32) #1

declare dso_local i32 @SYNCTEX_SIBLING(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
